--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "devDependencies": {
     "angular": "~1.0.7",
     "bootstrap": "~2.3.2",
-    "angular-bootstrap": "~0.3.0"
+    "angular-bootstrap": "~0.3.0",
+    "google-code-prettify": ""
   },
   "homepage": "https://github.com/shaoke/angularjs-examples",
   "authors": [
